# ur_impedance_control

./: .gitignore  README.md  Zaxis-5NM.txt  bagtocsv.sh  force.csv  plot.py  readme.txt  recordbag.sh  speed.csv  staterecord.bag  successful inserting_0906_2326.txt
bk/: a.out  main.cpp  test.csv
data/: force2.csv  force3.csv  force_apha27.1.csv  force_apha30.csv  forcetorque-17+-10.txt  forcetorque-17+-11.txt  forcetorque-17+-12.txt  forcetorque-17+-13.txt  forcetorque-17+-14.txt  forcetorque-17+-17.txt  forcetorque-17+-7.txt  forcetorque-17+-8.txt  forcetorque-500+-500.txt  rawforce.csv  speednew.csv
data/0911/: forcetorque-100+-100.txt  forcetorque-100+-20.txt  forcetorque-100+-40.txt  forcetorque-100+-60.txt  forcetorque-100+-80.txt  forcetorque-100+0.txt  forcetorque-100+100.txt  forcetorque-100+20.txt  forcetorque-100+40.txt  forcetorque-100+60.txt  forcetorque-100+80.txt  forcetorque-20+-100.txt  forcetorque-20+-20.txt  forcetorque-20+-40.txt  forcetorque-20+-60.txt  forcetorque-20+-80.txt  forcetorque-20+0.txt  forcetorque-20+100.txt  forcetorque-20+20.txt  forcetorque-20+40.txt  forcetorque-20+60.txt  forcetorque-20+80.txt  forcetorque-40+-100.txt  forcetorque-40+-20.txt  forcetorque-40+-40.txt  forcetorque-40+-60.txt  forcetorque-40+-80.txt  forcetorque-40+0.txt  forcetorque-40+100.txt  forcetorque-40+20.txt  forcetorque-40+40.txt  forcetorque-40+60.txt  forcetorque-40+80.txt  forcetorque-60+-100.txt  forcetorque-60+-20.txt  forcetorque-60+-40.txt  forcetorque-60+-60.txt  forcetorque-60+-80.txt  forcetorque-60+0.txt  forcetorque-60+100.txt  (+15 more)
data/0912/: forcetorque-100+-100.txt  forcetorque-100+-20.txt  forcetorque-100+-40.txt  forcetorque-100+-60.txt  forcetorque-100+-80.txt  forcetorque-100+0.txt  forcetorque-100+100.txt  forcetorque-100+20.txt  forcetorque-100+40.txt  forcetorque-100+60.txt  forcetorque-100+80.txt  forcetorque-20+-100.txt  forcetorque-20+-20.txt  forcetorque-20+-40.txt  forcetorque-20+-60.txt  forcetorque-20+-80.txt  forcetorque-20+0.txt  forcetorque-20+100.txt  forcetorque-20+20.txt  forcetorque-20+40.txt  forcetorque-20+60.txt  forcetorque-20+80.txt  forcetorque-40+-100.txt  forcetorque-40+-20.txt  forcetorque-40+-40.txt  forcetorque-40+-60.txt  forcetorque-40+-80.txt  forcetorque-40+0.txt  forcetorque-40+100.txt  forcetorque-40+20.txt  forcetorque-40+40.txt  forcetorque-40+60.txt  forcetorque-40+80.txt  forcetorque-60+-100.txt  forcetorque-60+-20.txt  forcetorque-60+-40.txt  forcetorque-60+-60.txt  forcetorque-60+-80.txt  forcetorque-60+0.txt  forcetorque-60+100.txt  (+16 more)
data/databk/: force1.csv  force_apha25-9.csv  force_apha31.csv  speed.csv  speed1.csv  speed2.csv  speed3.csv
experience/: explain.txt
experience/urpython/: ur_socket.py
rawcode/: LICENSE  readme.txt  text.txt  try.cpp
src/firstUrMoveIt/: .setup_assistant  CMakeLists.txt  package.xml
src/firstUrMoveIt/config/: kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  ur5.srdf
src/firstUrMoveIt/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_moveit_controller_manager.launch.xml  warehouse.launch
src/force_sensor/: CMakeLists.txt  package.xml
src/force_sensor/include/force_sensor/: ATI_NetBox_FT_Sensor.h  FTSensors.h
src/force_sensor/msg/: Force_Torque.msg
src/force_sensor/src/: ATI_NetBox_FT_Sensor.cpp  FTSensors.cpp  force_torque_pub.cpp
src/left_arm_config/: .setup_assistant  CMakeLists.txt  package.xml
src/left_arm_config/config/: fake_controllers.yaml  joint_limits.yaml  left_hand.srdf  ros_controllers.yaml
src/left_arm_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  left_hand_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/left_hand/: CMakeLists.txt  package.xml
src/my_ur_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur_control/: CMakeLists.txt  package.xml
src/ur_moveit_v2/: .setup_assistant  CMakeLists.txt  package.xml
src/wukongii_arm/: CMakeLists.txt  package.xml
src/wukongii_arm/config/: pid_control.yaml
src/wukongii_arm/launch/: get_control_param.launch
src/wukongii_arm/msg/: jointTarget.msg
src/wukongii_arm/src/: CMakeLists.txt  baseJointController.cpp  exchange_socket.cpp
src/wukongii_arm/urdf/: ur5.urdf  ur5.urdf.xacro  ur5_new.urdf
(+73 files in other folders)
